[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tplink-archer-be400-cli"
version = "1.0.0"
description = "Full CLI for TP-Link Archer BE400 routers — 130 reverse-engineered API endpoints, 36 commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "loliver1823"}]
keywords = ["tplink", "archer", "be400", "router", "cli", "api", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "tplinkrouterc6u",
    "pycryptodome",
]

[project.urls]
Homepage = "https://github.com/loliver1823/tplink-archer-be400-cli"

[project.scripts]
tplink-be400 = "tplink_be400.cli:main"
